# agent-migrator

./: .gitignore  LICENSE  README.md  inspect_native_strings.py  pyproject.toml  test_diff.js  verify_migration.py  verify_parity.py
.claude-plugin/: marketplace.json
.claude/skills/cli-explorer/: SKILL.md
agent_migrator/: __main__.py  cli.py  migrator.py  models.py  on_stop_failure.py
agent_migrator/agents/: base.py  claude_code.py  codex.py  cursor.py  gemini.py
agent_migrator/tools/: base.py  claude_code.py  codex.py  cursor.py  gemini.py  gemini_cli.py
cc-failover-plugin/: README.md
cc-failover-plugin/.claude-plugin/: plugin.json
cc-failover-plugin/hooks/: hooks.json
docs/: adding-new-agents.md  adding-new-tools.md
scripts/: test_codex_adapter.py  test_cursor_wsl.py  test_synthetic_migration.py
tests/: test_gemini_cli.py
