[project]
name = "agent-migrator"
version = "0.1.1"
description = "Migrate conversation history between AI coding tools"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.3.3",
    "questionary>=2.0.1",
]

[project.scripts]
agent-migrator = "agent_migrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_migrator"]
