[project]
name = "agent-migrator"
version = "0.1.0"
description = "Migrate conversation history between AI coding tools"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
    "questionary>=2.1.1",
    "notify-py>=0.3.43",
]

[project.scripts]
agent-migrator = "agent_migrator.cli:main"
agent-migrator-hook = "agent_migrator.on_stop_failure:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_migrator"]
